Alles neu macht der Februar

--- a/web.config
+++ b/web.config
@@ -12,13 +12,16 @@
 				</rule>
                 <rule name="RewriteUserFriendlyURL1" stopProcessing="true">
                     <match url="^(.*)$" />
-                    <conditions>
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
                     <action type="Rewrite" url="index.cfm?__easypath=/{R:1}" />
                 </rule>
             </rules>
         </rewrite>
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="index.cfm" />
+                <add value="index.html" />
+            </files>
+        </defaultDocument>
     </system.webServer>
 </configuration>
