--- a/web.config
+++ b/web.config
@@ -13,6 +13,8 @@
                 <rule name="RewriteUserFriendlyURL1" stopProcessing="true">
                     <match url="^(.*)$" />
                     <action type="Rewrite" url="index.cfm?__easypath=/{R:1}" />
+                    <conditions>
+                    </conditions>
                 </rule>
             </rules>
         </rewrite>
