Fehler beim Start

--- a/web.config
+++ b/web.config
@@ -12,7 +12,7 @@
 				</rule>
                 <rule name="RewriteUserFriendlyURL1" stopProcessing="true">
                     <match url="^(.*)$" />
-                    <action type="Rewrite" url="index.cfm?__easypath=/{R:1}" />
+                    <action type="Rewrite" url="index.cfm?__easypath=/{R:1}" appendQueryString="false" />
                     <conditions>
                     </conditions>
                 </rule>
