REST Service moved to /com/easyxms/rest

--- a/web.config
+++ b/web.config
@@ -25,5 +25,10 @@
                 <add value="index.html" />
             </files>
         </defaultDocument>
+        <httpProtocol>
+            <customHeaders>
+                <add name="Access-Control-Allow-Origin" value="*" />
+            </customHeaders>
+        </httpProtocol>
     </system.webServer>
 </configuration>
